force-app/main/default/objects/Lead/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Brochure/Flyer</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Friend or Relative (Word of Mouth)</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>MLC</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Physician Referral</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Repeat Caller</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>