force-app/main/default/objects/Lead/fields/If_No_for_whom__c.field-meta.xml
<CustomField>
    <fullName>If_No_for_whom__c</fullName>
    <label>If No, for whom?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_for_you__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>