force-app/main/default/objects/Lead/fields/Investor_Relations_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Investor_Relations_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Relations Opt In</label>
    <type>Checkbox</type>
</CustomField>