force-app/main/default/objects/Lead/fields/Is_ZBDandu__c.field-meta.xml
<CustomField>
    <fullName>Is_ZBDandu__c</fullName>
    <description>Checked if Lead Source Contains ZB Dandu. To be referred in Process Builder</description>
    <formula>OR( 
ISPICKVAL(LeadSource, &apos;ZBDanduDigital&apos; ),
ISPICKVAL(LeadSource, &apos;ZBDanduDigitalLab&apos;),
ISPICKVAL(LeadSource, &apos;ZBDanduDigitalRestorative&apos;),
ISPICKVAL(LeadSource, &apos;ZBDanduDigitalSurgical&apos;),
ISPICKVAL(LeadSource, &apos;ZBDanduHome&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPeriImplant&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPeriImplantM1Prevent&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPeriImplantM2Treat&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPeriImplantM3Revise&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPrecisePrep&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPrecisePrepPerfectStart&apos;),
ISPICKVAL(LeadSource,  &apos;ZBDanduPrecisePrepPreciseDrill &apos;)
)</formula>
    <label>Is ZBDandu</label>
    <type>Checkbox</type>
</CustomField>