force-app/main/default/objects/Lead/fields/Is_ZimmerBiomet__c.field-meta.xml
<CustomField>
    <fullName>Is_ZimmerBiomet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ZimmerBiomet?</label>
    <type>Checkbox</type>
</CustomField>