force-app/main/default/objects/Lead/fields/IsConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedFromLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsConvertedFromLead</label>
    <type>Checkbox</type>
</CustomField>