force-app/main/default/objects/Lead/fields/iTero_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>iTero_Demo_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>iTero 1:1 Demo Date</label>
    <type>Date</type>
</CustomField>