force-app/main/default/objects/Lead/fields/iTero_Demo_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>iTero_Demo_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iTero Demo Scheduled</label>
    <type>Checkbox</type>
</CustomField>