force-app/main/default/objects/Lead/fields/iTero_Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>iTero_Demo_Type__c</fullName>
    <label>iTero Demo Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Demo</fullName>
            </value>
            <value>
                <fullName>1-on-1 Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>