force-app/main/default/objects/Lead/fields/Joint_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Joint_Specialty__c</fullName>
    <label>Joint Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>OSP/ZImmer Surgical Products</fullName>
            </value>
            <value>
                <fullName>Orthobiologics</fullName>
            </value>
            <value>
                <fullName>Hand &amp; Wrist</fullName>
            </value>
            <value>
                <fullName>Patient Specific</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>