force-app/main/default/objects/Lead/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <label>Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unaware</fullName>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Remarket</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Value Realization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>