force-app/main/default/objects/Lead/fields/Lead_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Deal_Type__c</fullName>
    <label>Lead Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquire – Regen</fullName>
            </value>
            <value>
                <fullName>Acquire – Implant</fullName>
            </value>
            <value>
                <fullName>Acquire – Rest/Digital</fullName>
            </value>
            <value>
                <fullName>Acquire - Guided</fullName>
            </value>
            <value>
                <fullName>Acquire - DSUVIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>