force-app/main/default/objects/Lead/fields/Lead_District__c.field-meta.xml
<CustomField>
    <fullName>Lead_District__c</fullName>
    <label>Lead District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DN_Lead_Region_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>