force-app/main/default/objects/Lead/fields/Lead_is_not_in_my_territory__c.field-meta.xml
<CustomField>
    <fullName>Lead_is_not_in_my_territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead is not in my territory</label>
    <type>Checkbox</type>
</CustomField>