force-app/main/default/objects/Lead/fields/Lead_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opportunity_Amount__c</fullName>
    <label>Lead Opportunity Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1,000</fullName>
            </value>
            <value>
                <fullName>$2,000</fullName>
            </value>
            <value>
                <fullName>$3,000</fullName>
            </value>
            <value>
                <fullName>$4,000</fullName>
            </value>
            <value>
                <fullName>$5,000</fullName>
            </value>
            <value>
                <fullName>$6,000</fullName>
            </value>
            <value>
                <fullName>$7,000</fullName>
            </value>
            <value>
                <fullName>$8,000</fullName>
            </value>
            <value>
                <fullName>$9,000</fullName>
            </value>
            <value>
                <fullName>$10,000</fullName>
            </value>
            <value>
                <fullName>$10,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>