force-app/main/default/objects/Lead/fields/Lead_Products__c.field-meta.xml
<CustomField>
    <fullName>Lead_Products__c</fullName>
    <label>Lead Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>DSUVIA</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Implant Concierge</fullName>
            </value>
            <value>
                <fullName>Implants</fullName>
            </value>
            <value>
                <fullName>Instruments and Tools</fullName>
            </value>
            <value>
                <fullName>iTero</fullName>
            </value>
            <value>
                <fullName>PartnerZ</fullName>
            </value>
            <value>
                <fullName>Real Guide</fullName>
            </value>
            <value>
                <fullName>Regenerative</fullName>
            </value>
            <value>
                <fullName>Restorative</fullName>
            </value>
            <value>
                <fullName>Z3D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>