force-app/main/default/objects/Lead/fields/Lead_Record_Type_Hidden_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Hidden_2__c</fullName>
    <description>for contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Record Type(Hidden)2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>