force-app/main/default/objects/Lead/fields/Lead_Record_Type_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Hidden__c</fullName>
    <description>for account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Record Type(Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>