force-app/main/default/objects/Lead/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <label>Lead Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DDS, MS</fullName>
            </value>
            <value>
                <fullName>DDS, MD</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Implant Coordinator</fullName>
            </value>
            <value>
                <fullName>Surgical Assistant</fullName>
            </value>
            <value>
                <fullName>Hygienist</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Lab Owner</fullName>
            </value>
            <value>
                <fullName>CDT</fullName>
            </value>
            <value>
                <fullName>MDT</fullName>
            </value>
            <value>
                <fullName>Purchasing Director</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>Procurement Director</fullName>
            </value>
            <value>
                <fullName>Procurement Manager</fullName>
            </value>
            <value>
                <fullName>Laboratory Implant Manager</fullName>
            </value>
            <value>
                <fullName>Laboratory Implant Director</fullName>
            </value>
            <value>
                <fullName>Chair of Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Director of Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Chair of Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Director of Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Chair of Periodontics</fullName>
            </value>
            <value>
                <fullName>Director of Periodontics</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>