force-app/main/default/objects/Lead/fields/Main_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitor__c</fullName>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Astra</fullName>
            </value>
            <value>
                <fullName>Biohorizons</fullName>
            </value>
            <value>
                <fullName>Dentsply</fullName>
            </value>
            <value>
                <fullName>Geistlich</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Hiossen</fullName>
            </value>
            <value>
                <fullName>Lifenet</fullName>
            </value>
            <value>
                <fullName>Little Implant Co</fullName>
            </value>
            <value>
                <fullName>Maxxeus</fullName>
            </value>
            <value>
                <fullName>Megagen</fullName>
            </value>
            <value>
                <fullName>Nobel</fullName>
            </value>
            <value>
                <fullName>Osteohealth</fullName>
            </value>
            <value>
                <fullName>OsteoReady</fullName>
            </value>
            <value>
                <fullName>Salvin</fullName>
            </value>
            <value>
                <fullName>Straumann</fullName>
            </value>
            <value>
                <fullName>Camlog</fullName>
            </value>
            <value>
                <fullName>Implant</fullName>
                <label>Implant Direct</label>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Thommen</fullName>
            </value>
            <value>
                <fullName>ICX</fullName>
            </value>
            <value>
                <fullName>SIC</fullName>
            </value>
            <value>
                <fullName>NEOSS</fullName>
            </value>
            <value>
                <fullName>BEGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>