force-app/main/default/objects/Lead/fields/Medical_college_year_grduated__c.field-meta.xml
<CustomField>
    <fullName>Medical_college_year_grduated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical (college/year grduated)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>