force-app/main/default/objects/Lead/fields/Medical_School__c.field-meta.xml
<CustomField>
    <fullName>Medical_School__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical School</label>
    <type>TextArea</type>
</CustomField>