force-app/main/default/objects/Lead/fields/mkto71_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inquiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry Date</label>
    <type>DateTime</type>
</CustomField>