force-app/main/default/objects/Lead/fields/mkto71_Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertisement Offline</fullName>
            </value>
            <value>
                <fullName>Digital Advertisement</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Incoming Call/Email/Chat</fullName>
            </value>
            <value>
                <fullName>List Import</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sales Prospecting</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>