force-app/main/default/objects/Lead/fields/mkto71_Lead_Source_Most_Recent_Details__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Source_Most_Recent_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source Most Recent Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>