force-app/main/default/objects/Lead/fields/mkto71_Marketo_LifeCycle_Status__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Marketo_LifeCycle_Status__c</fullName>
    <label>Marketo LifeCycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contact w/ Opportunity</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Known</fullName>
            </value>
            <value>
                <fullName>Marketo Qualified</fullName>
            </value>
            <value>
                <fullName>Opportunity – Won</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>