force-app/main/default/objects/Lead/fields/mkto71_Marketo_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Marketo_Qualified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketo Qualified Date</label>
    <type>DateTime</type>
</CustomField>