force-app/main/default/objects/Lead/fields/Most_Recent_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most Recent Cadence</label>
    <length>75</length>
    <type>Text</type>
</CustomField>