force-app/main/default/objects/Lead/fields/Most_Recent_Cadence_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Next_Step__c</fullName>
    <label>Most Recent Cadence - Next Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>