force-app/main/default/objects/Lead/fields/New_Listing__c.field-meta.xml
<CustomField>
    <fullName>New_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Listing</label>
    <type>Checkbox</type>
</CustomField>