force-app/main/default/objects/Lead/fields/Number_of_Sets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sets__c</fullName>
    <description>Please indicate numer of sets for conversion, retention or loyal user</description>
    <label>Number of Sets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>