force-app/main/default/objects/Lead/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Date</label>
    <type>DateTime</type>
</CustomField>