force-app/main/default/objects/Lead/fields/Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>captures the Opt Out Date if Status is set to Opt Out</inlineHelpText>
    <label>Opt Out Date</label>
    <type>Date</type>
</CustomField>